Añadido icon font del menu y fonts--amend

--- a/src/styles/content.styl
+++ b/src/styles/content.styl
@@ -4,7 +4,8 @@
 
   &-container
     p
-      padding 1em
+      padding .5em 0
+      
     &-picture
       img
         width 100vw
@@ -40,6 +41,8 @@
 
     &-features
       display flex
+      justify-content space-between
+
     &-container
       display flex
       flex-direction row
